SED-4574 supporting analytics on RAW metric samples